--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-consumer.key=2NBE41xemjv3slGjaEUDbavwU
-consumer.secret=fpfm218prQYq5bhLcWLhBf5lYTO0a3VvvGvUNuBKOnY6czWOFI
-access.token=713930616-Tnx8dWiP00f3xPXRXBjnweIrQSJnAeN0PVTPcNs9
-access.secret=WPINzEt5Xc5OFFQkvGSxM97hlFKAW5j1Q8o9aOrP7zlVP
+consumer.key=****
+consumer.secret=***
+access.token=***
+access.secret=***
